fixed margins for border overlap

--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ section{
 
 section.lecture-notes{
   background-color: var(--color2);
-  margin-right: -0.5px;
+  margin-right: -1px;
 }
 
 section.exams{
@@ -52,7 +52,7 @@ section.exams{
 
 section.about{
   background-color: var(--color4);
-  margin-left: -0.5px;
+  margin-left: -1px;
 }
 
 h2{
@@ -86,7 +86,7 @@ p{
 
 header{
   font-size: 20px;
-  margin-bottom: -0.5px;
+  margin-bottom: -1px;
   border: 1px solid var(--color1);
 }
 
@@ -114,7 +114,6 @@ div.placeholder{
 }
 
 article.note{
-  font-family: Arial, Helvetica, sans-serif;
   margin: auto;
   width: 700px;
   font-size: 19px;
@@ -142,7 +141,7 @@ article.note p{
   margin-top: 0px;
 }
 
-@media (max-width: 700px){
+@media (max-width: 800px){
   div{
     flex-wrap: wrap;
     justify-content: left;
@@ -154,13 +153,13 @@ article.note p{
   }
 
   section.lecture-notes{
-    margin-right: -0.5px;
+    margin-right: -1px;
   }
   
   section.about{
     width: 50%;
     margin-left: 0px;
-    margin-top: -0.5px;
+    margin-top: -1px;
   }
 
   /* note layout */
@@ -186,13 +185,13 @@ article.note p{
 
   section.lecture-notes{
     margin-right: 0px;
-    margin-bottom: -0.5px;
+    margin-bottom: -1px;
   }
   
   section.about{
     width: 100%;
     margin-left: 0px;
-    margin-top: -0.5px;
+    margin-top: -1px;
   }
 
   /* note layout */
